# rossum-agents

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  codecov.yml  docker-compose.yml  env.sample  pyproject.toml  ruff.toml
rossum-agent/: CHANGELOG.md  README.md  alembic.ini  pyproject.toml
rossum-agent/data/: rossum-kb.json
rossum-agent/rossum_agent/: __init__.py  bedrock_client.py  db.py  postgres_storage.py  redis_storage.py  rossum_mcp_integration.py  storage.py  url_context.py  utils.py
rossum-agent/rossum_agent/agent/: __init__.py  cautious_gate.py  core.py  memory.py  models.py  skills.py  spillover.py  streaming.py  tool_execution.py
rossum-agent/rossum_agent/alembic/: env.py
rossum-agent/rossum_agent/api/: commands.py  dependencies.py  main.py
rossum-agent/rossum_agent/change_tracking/: commit_service.py  models.py  store.py
rossum-agent/rossum_agent/context/: __init__.py  models.py
rossum-agent/rossum_agent/data/: rossum-kb.json
rossum-agent/rossum_agent/planning/: __init__.py  models.py
rossum-agent/rossum_agent/prompts/: __init__.py  base_prompt.py  system_prompt.py
rossum-agent/rossum_agent/python_tools/: __init__.py
rossum-agent/rossum_agent/skills/: document-testing.md  formula-fields.md  hooks.md  lookup-fields.md  organization-setup.md  python-execution.md  reasoning-fields.md  rossum-deployment.md  rules-and-actions.md  schema-creation.md  schema-patching.md  schema-pruning.md  sow-creation.md  txscript.md  ui-settings.md
rossum-agent/rossum_agent/storage/: __init__.py  artifact_store.py  backend.py  handles.py  s3_backend.py
rossum-agent/rossum_agent/streamlit_app/: app.py
rossum-agent/rossum_agent/tools/: __init__.py  ask_user.py  change_history.py  core.py  data_tools.py  deploy.py  dynamic_tools.py  elis_backend_openapi_search.py  file_tools.py  formula.py  knowledge_base_search.py  lookup.py  mock_pdf.py  planning.py  python_exec.py  rule.py  skills.py  spawn_mcp.py  task_tracker.py  utils.py
rossum-agent/scripts/: generate_openapi.py  openapi_redoc.html  scrape_knowledge_base.py
rossum-agent/tests/: test_agent_db.py  test_bedrock_client.py  test_dynamic_tools.py  test_postgres_storage.py  test_redis_storage.py  test_rossum_mcp_integration.py  test_smoke.py  test_utils.py
rossum-agent/tests/agent/: test_cautious_gate.py  test_context_propagation.py  test_core.py  test_memory.py  test_models.py  test_skills.py  test_spillover.py  test_streaming.py  test_tool_execution.py
rossum-agent/tests/api/: conftest.py  test_agent_service.py  test_cancellation.py  test_chat_service.py  test_command_interception.py  test_commands.py  test_concurrent_requests.py  test_document_upload.py  test_feedback_routes.py  test_file_routes.py  test_file_service.py  test_main.py  test_message_routes.py  test_openapi.py  test_routes.py  test_schemas.py  test_slack_routes.py  test_slack_service.py
rossum-agent/tests/change_tracking/: test_commit_service.py  test_models.py  test_store.py  test_tracking_connection.py
rossum-agent/tests/context/: test_models.py
(+378 files in other folders)
