[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rossum-agent"
version = "1.2.1"
description = "AI agent toolkit for Rossum: document workflows conversationally, debug pipelines automatically, and enable agentic configuration of intelligent document processing."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Dan Stancl (Rossum AI)", email = "daniel.stancl@gmail.com"}
]
keywords = ["agent", "rossum", "document-processing", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "anthropic>=0.79.0",
    "boto3>=1.0",
    "defusedxml>=0.7.0",
    "fastmcp>=2.13.0",
    "httpx>=0.27.0",
    "jinja2>=3.0",
    "jq>=1.7.0",
    "pyyaml>=6.0",
    "python-dotenv",
    "requests>=2.32",
    "rossum-api>=3.9.1",
    "rossum-deploy>=0.1.0",
    "rossum-mcp>=1.3.0",
    "tqdm>=4.66",
]

[project.scripts]
rossum-agent-api = "rossum_agent.api.main:main"

[project.optional-dependencies]
api = [
    "fastapi>=0.115.0",
    "gunicorn>=23.0.0",
    "pydantic>2.0.0",
    "python-multipart>=0.0.22",
    "redis>=7.0.0",
    "slowapi>=0.1.9",
    "sse-starlette>=2.0.0",
    "uvicorn>=0.32.0",
    "wsproto>=1.2.0",
]
slack = [
    "slack-sdk[optional]>=3.27.0",
]
docs = [
    "myst-parser>=2.0.0",
    "sphinx>=7.0.0",
    "sphinx-autodoc-typehints>=1.25.0",
    "sphinx-copybutton>=0.5.2",
    "furo",
]
tests = [
    "coverage>=7.0.0",
    "httpx>=0.27.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "slack-sdk[optional]>=3.27.0",
    "redis>=7.0.0",
]
all = [
    "coverage>=7.0.0",
    "fastapi>=0.115.0",
    "gunicorn>=23.0.0",
    "httpx>=0.27.0",
    "myst-parser>=2.0.0",
    "pydantic>2.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "python-multipart>=0.0.22",
    "redis>=7.0.0",
    "slack-sdk[optional]>=3.27.0",
    "slowapi>=0.1.9",
    "sphinx>=7.0.0",
    "sphinx-autodoc-typehints>=1.25.0",
    "sphinx-copybutton>=0.5.2",
    "furo",
    "sse-starlette>=2.0.0",
    "uvicorn>=0.32.0",
    "wsproto>=1.2.0",
]

[tool.pytest.ini_options]
markers = [
    "smoke: smoke tests requiring real API credentials (ROSSUM_API_TOKEN, ROSSUM_API_BASE_URL)",
    "integration: integration tests requiring network access (e.g. downloading OpenAPI spec)"
]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
include = ["rossum_mcp*", "rossum_agent*", "rossum_deploy*"]

[tool.setuptools.package-data]
rossum_agent = ["assets/*.png", "skills/*.md"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
